# pico-google-photos

./: Cargo.toml  LICENSE  README.md  config.example.toml  debug-browser.sh  install.sh  pico-google-photos.service  release.sh  uninstall.sh
.github/workflows/: release.yml
src/: chromium.rs  compositor.rs  config.rs  display_power.rs  main.rs  schedule.rs
