[package]
name        = "pico-google-photos"
version     = "0.1.2"
edition     = "2021"
description = "Headless Chromium kiosk loading Google Photos mobile UI on Raspberry Pi (no desktop, no X11)"
license     = "MIT"
repository  = "https://github.com/kethanva/pico-google-photos"

[[bin]]
name = "pico-google-photos"
path = "src/main.rs"

[dependencies]
anyhow      = "1.0"
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4", features = ["derive", "env"] }
dirs        = "5"
env_logger  = "0.11"
log         = "0.4"
nix         = { version = "0.29", features = ["signal", "process"] }
serde       = { version = "1.0", features = ["derive"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "signal", "fs", "sync"] }
toml        = "0.8"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[profile.release-fast]
inherits      = "release"
opt-level     = 2
lto           = false
codegen-units = 16
incremental   = false
